--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 inventory = local.ini,vars.ini
 interpreter_python = auto_silent
+result_format = yaml
 stdout_callback = yaml
 bin_ansible_callbacks = True
