--- a/playbooks/container-rocky.yaml
+++ b/playbooks/container-rocky.yaml
@@ -57,9 +57,9 @@
         EOF
 
         ## Set profile
-        wwctl profile set --yes default --container rocky-9
-        wwctl profile set --yes default --kernelargs="console=tty0 console=ttyS0,115200 crashkernel=no systemd.log_color=0"
-        wwctl profile set --yes default --netname default --netdev eth0
+        wwctl profile set --yes nodes --container rocky-9
+        wwctl profile set --yes nodes --kernelargs="console=tty0 console=ttyS0,115200 crashkernel=no systemd.log_color=0"
+        wwctl profile set --yes nodes --netname default --netdev eth0
 
       args:
         creates: /var/lib/warewulf/provision/container/rocky-9.img.gz
