--- a/vars.ini
+++ b/vars.ini
@@ -1,3 +1,7 @@
+[ohpc]
+localhost ansible_connection=local
+
 [ohpc:vars]
-warewulf_build = true
-warewulf_version = v4.6.0rc1
+warewulf_build = False # build warewulf from source
+warewulf_release  = True # use GitHub release version of warewulf
+warewulf_rpm = https://github.com/warewulf/warewulf/releases/download/v4.6.0rc2/warewulf-4.6.0rc2-1.el9.x86_64.rpm
