--- a/vars.ini
+++ b/vars.ini
@@ -5,3 +5,4 @@ localhost ansible_connection=local
 warewulf_build = False # build warewulf from source
 warewulf_release  = True # use GitHub release version of warewulf
 warewulf_rpm = https://github.com/warewulf/warewulf/releases/download/v4.6.0rc2/warewulf-4.6.0rc2-1.el9.x86_64.rpm
+# warewulf_rpm = https://github.com/MiddelkoopT/warewulf/releases/download/v4.6.0rc2-tm-dev/warewulf-4.6.0rc2.tm.dev-1.el9.x86_64.rpm
