--- a/playbooks/image-rocky.yaml
+++ b/playbooks/image-rocky.yaml
@@ -3,7 +3,7 @@
   become: true
   tasks:
 
-- name: Build Rocky Container
+- name: Build Rocky Image
   hosts: head
   become: true
   tasks:
@@ -15,10 +15,10 @@
         sms_ip=10.5.0.8
 
         ## Import node image from Warewulf
-        wwctl container import docker://ghcr.io/warewulf/warewulf-rockylinux:9 rocky-9
-        wwctl container syncuser rocky-9 --write # get uid/gid in before install
+        wwctl image import docker://ghcr.io/warewulf/warewulf-rockylinux:9 rocky-9
+        wwctl image syncuser rocky-9 --write # get uid/gid in before install
 
-        wwctl container exec rocky-9 /bin/bash <<EOF
+        wwctl image exec rocky-9 /bin/bash <<EOF
           set -e
 
           ## Mirror
@@ -57,9 +57,9 @@
         EOF
 
         ## Set profile
-        wwctl profile set --yes nodes --container rocky-9
+        wwctl profile set --yes nodes --image rocky-9
         wwctl profile set --yes nodes --kernelargs="console=tty0 console=ttyS0,115200 crashkernel=no systemd.log_color=0"
         wwctl profile set --yes nodes --netname default --netdev eth0
 
       args:
-        creates: /var/lib/warewulf/provision/container/rocky-9.img.gz
+        creates: /var/lib/warewulf/provision/image/rocky-9.img.gz
