--- a/playbooks/ohpc-head.yaml
+++ b/playbooks/ohpc-head.yaml
@@ -130,8 +130,8 @@
         systemctl enable --now slurmctld
 
         ## Import node image
-        wwctl container import docker://ghcr.io/warewulf/warewulf-rockylinux:9 rocky-9
-        wwctl container syncuser rocky-9 --write # get uid/gid in before install
+        wwctl image import docker://ghcr.io/warewulf/warewulf-rockylinux:9 rocky-9
+        wwctl image syncuser rocky-9 --write # get uid/gid in before install
 
         ## Create "nodes" profile and inherit settings from the "default" profile
         wwctl profile add nodes --profile default --comment "Nodes profile"
@@ -157,7 +157,7 @@
 
         sms_ip=10.5.0.8
 
-        wwctl container exec rocky-9 --syncuser /bin/bash <<EOF
+        wwctl image exec rocky-9 --syncuser /bin/bash <<EOF
         export YUM_MIRROR_BASE=https://mirror.usi.edu/pub/rocky # optional mirror
 
         dnf install -y dnf-plugins-core
@@ -195,8 +195,8 @@
         ## Add munge to nodes
         wwctl profile set --yes nodes --wwinit munge
 
-        ## Set as default container and set kernel args
-        wwctl profile set --yes nodes --container rocky-9
+        ## Set as default image and set kernel args
+        wwctl profile set --yes nodes --image rocky-9
         wwctl profile set --yes nodes --kernelargs='console=tty0,"console=ttyS0,115200",systemd.log_color=0,crashkernel=no,vga=791'
 
         touch /root/configure-node-image.stamp
