--- a/vars.ini
+++ b/vars.ini
@@ -2,7 +2,6 @@
 localhost ansible_connection=local
 
 [ohpc:vars]
-warewulf_build = False # build warewulf from source
-warewulf_release  = True # use GitHub release version of warewulf
-warewulf_rpm = https://github.com/warewulf/warewulf/releases/download/v4.6.0rc2/warewulf-4.6.0rc2-1.el9.x86_64.rpm
-# warewulf_rpm = https://github.com/MiddelkoopT/warewulf/releases/download/v4.6.0rc2-tm-dev/warewulf-4.6.0rc2.tm.dev-1.el9.x86_64.rpm
+warewulf_build = False   # build Warewulf from source
+warewulf_release  = True # use GitHub release rpm of warewulf
+warewulf_rpm = https://github.com/warewulf/warewulf/releases/download/v4.6.0rc3/warewulf-4.6.0rc3-1.el9.x86_64.rpm
