Fixed Warewulf v4.6.0 URL

--- a/vars.ini
+++ b/vars.ini
@@ -4,4 +4,4 @@ localhost ansible_connection=local
 [ohpc:vars]
 warewulf_build = False   # build Warewulf from source
 warewulf_release  = True # use GitHub release rpm of warewulf
-warewulf_rpm = https://github.com/warewulf/warewulf/releases/download/v4.6.0rc3/warewulf-4.6.0-1.el9.x86_64.rpm
+warewulf_rpm = https://github.com/warewulf/warewulf/releases/download/v4.6.0/warewulf-4.6.0-1.el9.x86_64.rpm
