AlmaLinux basic support and dev docs

--- a/playbooks/system-rocky.yaml
+++ b/playbooks/system-rocky.yaml
@@ -11,6 +11,7 @@
     - name: Prep base systems
       ansible.builtin.dnf:
         name:
+          - yum-utils # AlmaLinux
           - dnf-plugins-core
           - python3-pip
 
