Specify system for static munge user/group

--- a/playbooks/image-rocky.yaml
+++ b/playbooks/image-rocky.yaml
@@ -39,8 +39,8 @@
           dnf install -y kernel
 
           ## Allocate static UID:120 GID:120 for munge
-          groupadd -g 120 munge
-          useradd -u 120 -g 120 -d /run/munge -s /sbin/nologin -c "Runs Uid N Gid Emporium" munge
+          groupadd --system -g 120 munge
+          useradd --system -u 120 -g 120 -d /run/munge -s /sbin/nologin -c "Runs Uid N Gid Emporium" munge
 
           ## Install compute node packages
           dnf install -y slurm-slurmd munge chrony
